sfdx-source/force-app/main/default/objects/Xref__c/Xref__c.object-meta.xml
<CustomObject>
    <description>LEM-800: Xref is an object that maintains the mapping of business and store accounts to backend product systems.</description>
    <label>Xref</label>
    <nameField>
        <displayFormat>XR - {0000}</displayFormat>
        <label>Xref Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xrefs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>