sfdx-source/force-app/main/default/objects/Xref__c/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-800: Signifies the record type of the account.</description>
    <formula>Salesforce_Account_Name__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Signifies the record type of the account</inlineHelpText>
    <label>Account Record Type</label>
    <type>Text</type>
</CustomField>