sfdx-source/force-app/main/default/objects/Xref__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-17787: It is used to fetch Segment from the associated Account.</description>
    <formula>TEXT(Salesforce_Account_Name__r.Segment__c)</formula>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>