sfdx-source/force-app/main/default/objects/Xref__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-800: Represents the type of account in Salesforce.</description>
    <formula>TEXT(Salesforce_Account_Name__r.Type)</formula>
    <inlineHelpText>Represents the type of account in Salesforce</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>