sfdx-source/force-app/main/default/objects/Xref__c/fields/Associated_Rate_Change_Request__c.field-meta.xml
<CustomField>
    <fullName>Associated_Rate_Change_Request__c</fullName>
    <description>LEM-6471</description>
    <formula>Salesforce_Account_Name__r.Rate_Change_Request__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Rate Change Request</label>
    <type>Text</type>
</CustomField>