sfdx-source/force-app/main/default/objects/Xref__c/fields/Business_GroupID__c.field-meta.xml
<CustomField>
    <fullName>Business_GroupID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2197: Signifies the corresponding backend store ID for the business.</description>
    <formula>Business_Reference__r.Business_Group_Id__c</formula>
    <inlineHelpText>Signifies the corresponding backend store ID for the business</inlineHelpText>
    <label>Business Group ID</label>
    <type>Text</type>
</CustomField>