sfdx-source/force-app/main/default/objects/Xref__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <description>LEM-4617: It indicates business name of the associated Business Reference.</description>
    <formula>Business_Reference__r.Business_Name__c</formula>
    <label>Business Name</label>
    <type>Text</type>
</CustomField>