sfdx-source/force-app/main/default/objects/Xref__c/fields/Business_Reference__c.field-meta.xml
<CustomField>
    <fullName>Business_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1911 Lookup to the Business Reference record</description>
    <label>Business Reference</label>
    <referenceTo>Business_Reference__c</referenceTo>
    <relationshipLabel>Xrefs</relationshipLabel>
    <relationshipName>Xrefs</relationshipName>
    <type>Lookup</type>
</CustomField>