sfdx-source/force-app/main/default/objects/Xref__c/fields/BusinessID__c.field-meta.xml
<CustomField>
    <fullName>BusinessID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2197: Signifies the corresponding backend business ID for the business.</description>
    <formula>Business_Reference__r.External_Id__c</formula>
    <inlineHelpText>Signifies the corresponding backend business ID for the business</inlineHelpText>
    <label>Business ID</label>
    <type>Text</type>
</CustomField>