sfdx-source/force-app/main/default/objects/Xref__c/fields/COO_Graveyard_Id__c.field-meta.xml
<CustomField>
    <fullName>COO_Graveyard_Id__c</fullName>
    <description>LEM-5768: This will be copied from parent workorder if exists</description>
    <inlineHelpText>This will be copied from parent workorder if exists</inlineHelpText>
    <label>COO Graveyard Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>