sfdx-source/force-app/main/default/objects/Xref__c/fields/Coo_Process__c.field-meta.xml
<CustomField>
    <fullName>Coo_Process__c</fullName>
    <description>LEM-5768</description>
    <label>COO Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process via Batch Mode</fullName>
            </value>
            <value>
                <fullName>Process via Async Mode</fullName>
            </value>
            <value>
                <fullName>Process via Platform Event</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>