sfdx-source/force-app/main/default/objects/Xref__c/fields/Date_of_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Status_Change__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1631: This field is used to store the date and time whenever the Xref status changes.</description>
    <inlineHelpText>This field stores the date and time whenever the Xref status changes.</inlineHelpText>
    <label>Date of Status Change</label>
    <type>DateTime</type>
</CustomField>