sfdx-source/force-app/main/default/objects/Xref__c/fields/Drive_Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_Store_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-5768: Represents the ID of the Drive store in MINT. We stamp this in SFDC while processing COO for this store</description>
    <inlineHelpText>Represents the ID of the Drive store in MINT</inlineHelpText>
    <label>Drive Store Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>