sfdx-source/force-app/main/default/objects/Xref__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-800: Represents the ID of the associated backend record.</description>
    <externalId>true</externalId>
    <inlineHelpText>Represents the ID of the associated backend record</inlineHelpText>
    <label>Store ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>