sfdx-source/force-app/main/default/objects/Xref__c/fields/External_ID_Source__c.field-meta.xml
<CustomField>
    <fullName>External_ID_Source__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-800: Represents the Business ID for the Mx in product.</description>
    <inlineHelpText>Represents product backend source of the Store ID for the Mx</inlineHelpText>
    <label>External ID Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Figment</fullName>
            </value>
            <value>
                <fullName>MDS - Catering</fullName>
            </value>
            <value>
                <fullName>MDS</fullName>
            </value>
            <value>
                <fullName>DriveDb</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
                <isActive>false</isActive>
                <label>Drive</label>
            </value>
            <value>
                <fullName>Marketplace</fullName>
                <isActive>false</isActive>
                <label>Marketplace</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>