sfdx-source/force-app/main/default/objects/Xref__c/fields/Figment_ID__c.field-meta.xml
<CustomField>
    <fullName>Figment_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1402: Signifies the corresponding Figment Salesforce ID for the business or store account.</description>
    <inlineHelpText>Signifies the corresponding Figment Salesforce ID for the business or store account</inlineHelpText>
    <label>Figment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>