sfdx-source/force-app/main/default/objects/Xref__c/fields/Inactive_Xref__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Xref__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-1631: This field is used to represent the inactive Xref record</description>
    <inlineHelpText>This field represents the inactive Xref record</inlineHelpText>
    <label>Inactive Xref</label>
    <referenceTo>Xref__c</referenceTo>
    <relationshipLabel>Xrefs</relationshipLabel>
    <relationshipName>Xrefs</relationshipName>
    <type>Lookup</type>
</CustomField>