sfdx-source/force-app/main/default/objects/Xref__c/fields/Integration_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Message__c</fullName>
    <description>LEM-1911</description>
    <label>Integration Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>