sfdx-source/force-app/main/default/objects/Xref__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>LEM-1911</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Waiting for Business</fullName>
            </value>
            <value>
                <fullName>Ready for Integration</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
            <value>
                <fullName>Ready for COO Integration</fullName>
            </value>
            <value>
                <fullName>COO Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>