sfdx-source/force-app/main/default/objects/Xref__c/fields/Last_Integration_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Integration_Sync__c</fullName>
    <description>LEM-1911</description>
    <label>Last Integration Sync</label>
    <type>DateTime</type>
</CustomField>