sfdx-source/force-app/main/default/objects/Xref__c/fields/Latest_MDS_Updated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_MDS_Updated_Date_Time__c</fullName>
    <label>Latest MDS Updated Date Time</label>
    <type>DateTime</type>
</CustomField>