sfdx-source/force-app/main/default/objects/Xref__c/fields/Merchant_Portal__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Portal__c</fullName>
    <description>LEM-4611: It indicates the link to the Merchant Portal.</description>
    <formula>IF(
  ISBLANK(External_ID__c),
  null,
  HYPERLINK(
    $CustomMetadata.Static_Configurations__mdt.Merchant_Portal_Store_URL.Configuration_Value__c + External_ID__c,
    External_ID__c,
    &quot;_blank&quot;
  )
)</formula>
    <label>Merchant Portal - Store</label>
    <type>Text</type>
</CustomField>