sfdx-source/force-app/main/default/objects/Xref__c/fields/Mint_Business_Portal_Page__c.field-meta.xml
<CustomField>
    <fullName>Mint_Business_Portal_Page__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2197: Link to the Merchant Portal for the corresponding Mx account.</description>
    <formula>Business_Reference__r.Merchant_Portal_Business_ID__c</formula>
    <inlineHelpText>Link to the Merchant Portal for the corresponding Mx account</inlineHelpText>
    <label>Merchant Portal - Business</label>
    <type>Text</type>
</CustomField>