sfdx-source/force-app/main/default/objects/Xref__c/fields/Mint_BusinessPage__c.field-meta.xml
<CustomField>
    <fullName>Mint_BusinessPage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2197: Business ID and link to the Mint business page for Marketplace and Drive.</description>
    <formula>Business_Reference__r.Mint_Business_Page__c</formula>
    <inlineHelpText>Business ID and link to the Mint business page</inlineHelpText>
    <label>MINT Business Page</label>
    <type>Text</type>
</CustomField>