sfdx-source/force-app/main/default/objects/Xref__c/fields/MINT_Store_Page__c.field-meta.xml
<CustomField>
    <fullName>MINT_Store_Page__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1517: External ID of store and link to the Mint Store page for Marketplace.</description>
    <formula>IF(OR(TEXT(External_ID_Source__c) = $Label.MDS,TEXT(External_ID_Source__c) = $Label.DriveDb) &amp;&amp; NOT(ISBLANK(External_ID__c)), HYPERLINK($CustomMetadata.Static_Configurations__mdt.MINT_Store_Page_URL.Configuration_Value__c + External_ID__c, External_ID__c, &quot;_blank&quot;), null)</formula>
    <inlineHelpText>External ID of store and link to the Mint Store page</inlineHelpText>
    <label>MINT Store Page</label>
    <type>Text</type>
</CustomField>