sfdx-source/force-app/main/default/objects/Xref__c/fields/Old_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Old_Integration_Status__c</fullName>
    <description>LEM-11671: It is used to display the Integration Status of Inactive Xref in Onboarding Details section on Work Plan.</description>
    <formula>TEXT(Inactive_Xref__r.Integration_Status__c)</formula>
    <label>Old Integration Status</label>
    <type>Text</type>
</CustomField>