sfdx-source/force-app/main/default/objects/Xref__c/fields/Old_Store_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Store_Id__c</fullName>
    <description>LEM-11671: It is used to display the Store Id of Inactive Xref in Onboarding Details section on Work Plan.</description>
    <formula>Inactive_Xref__r.External_ID__c</formula>
    <label>Old Store Id</label>
    <type>Text</type>
</CustomField>