sfdx-source/force-app/main/default/objects/Xref__c/fields/Online_Ordering_Business_Page__c.field-meta.xml
<CustomField>
    <fullName>Online_Ordering_Business_Page__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-24847: It is used to store the External ID of the Business and link to the Online Ordering business page.</description>
    <formula>Business_Reference__r.Online_Ordering_Business_Page__c</formula>
    <inlineHelpText>Business ID and link to Online Ordering business page</inlineHelpText>
    <label>Online Ordering Business Page</label>
    <type>Text</type>
</CustomField>