sfdx-source/force-app/main/default/objects/Xref__c/fields/Online_Ordering_Store_Page__c.field-meta.xml
<CustomField>
    <fullName>Online_Ordering_Store_Page__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-24847: It is used to store the External ID of the Store and link to the Online Ordering store page.</description>
    <formula>HYPERLINK($CustomMetadata.Static_Configurations__mdt.Online_Ordering_Store_Page_URL.Configuration_Value__c+
External_ID__c,
External_ID__c,
&quot;_blank&quot;
)</formula>
    <inlineHelpText>External ID of the Store and link to the Online Ordering store page</inlineHelpText>
    <label>Online Ordering Store Page</label>
    <type>Text</type>
</CustomField>