sfdx-source/force-app/main/default/objects/Xref__c/fields/POS_Page__c.field-meta.xml
<CustomField>
    <fullName>POS_Page__c</fullName>
    <description>LEM-11510: It indicates POS page link for the associated Store Id.</description>
    <formula>IF(
  ISBLANK(External_ID__c),
  null,
  HYPERLINK(
    $CustomMetadata.Static_Configurations__mdt.Point_of_Sale_Setting_URL.Configuration_Value__c + External_ID__c,
    External_ID__c,
    &quot;_blank&quot;
  )
)</formula>
    <label>POS Page</label>
    <type>Text</type>
</CustomField>