sfdx-source/force-app/main/default/objects/Xref__c/fields/Provisioning_Error_Category__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Error_Category__c</fullName>
    <description>Created this field to capture the Provisioning Error Category in case of an Provisioning Error, this can used to report the errors based on categories and work accordingly. https://doordash.atlassian.net/browse/LEM-9937</description>
    <label>Provisioning Error Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Banking Validation</fullName>
            </value>
            <value>
                <fullName>Missing SFDC Data</fullName>
            </value>
            <value>
                <fullName>Service Record Mismatch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>