sfdx-source/force-app/main/default/objects/Xref__c/fields/Salesforce_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Account_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-800: Signifies the Salesforce ID for the business or store account.</description>
    <formula>CASESAFEID(Salesforce_Account_Name__r.Id)</formula>
    <inlineHelpText>Signifies the Salesforce ID for the business or store account</inlineHelpText>
    <label>Salesforce Account ID</label>
    <type>Text</type>
</CustomField>