sfdx-source/force-app/main/default/objects/Xref__c/fields/Unified_Business_ID__c.field-meta.xml
<CustomField>
    <fullName>Unified_Business_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2197: Signifies the backend unified ID tying Marketplace and Drive business IDs.</description>
    <formula>Business_Reference__r.Unified_Business_ID__c</formula>
    <inlineHelpText>Signifies the backend unified ID tying Marketplace and Drive business IDs</inlineHelpText>
    <label>Unified Business ID</label>
    <type>Text</type>
</CustomField>