sfdx-source/force-app/main/default/objects/Xref__c/fields/Unified_Store_ID__c.field-meta.xml
<CustomField>
    <fullName>Unified_Store_ID__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2197: Signifies the backend unified ID tying Marketplace and Drive Store IDs.</description>
    <inlineHelpText>Signifies the backend unified ID tying Marketplace and Drive Store IDs</inlineHelpText>
    <label>Unified Store ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>