sfdx-source/force-app/main/default/objects/Xref__c/fields/Xref_Status__c.field-meta.xml
<CustomField>
    <fullName>Xref_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <description>LEM-1631: This field is used to represent the status of the store account</description>
    <inlineHelpText>This field represents the status of the store account</inlineHelpText>
    <label>Xref Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>