sfdx-source/force-app/main/default/objects/Xref__c/validationRules/Restrict_IntegrationStatus_Field_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_IntegrationStatus_Field_Update</fullName>
    <active>true</active>
    <description>LEM-5684: This validation rule is to restrict the users not to update Integration Status field to &apos;Success&apos; except for a few profiles.</description>
    <errorConditionFormula>AND(
NOT($Permission.Bypass_Xref_Validation_Rules),
ISCHANGED(Integration_Status__c),
OR(
    TEXT(Integration_Status__c) = $Label.Xref_Integration_Status_Success,
    TEXT(Integration_Status__c) = $Label.Xref_Integration_Status_COO_Success
    ),
$User.Full_Name__c != &apos;Mulesoft Integration User&apos;,
$User.Full_Name__c != &apos;Automated Process&apos;,
$User.Full_Name__c != &apos;Process Automation User&apos;
)</errorConditionFormula>
    <errorDisplayField>Integration_Status__c</errorDisplayField>
    <errorMessage>You cannot update the status of this Xref to “Success” or to “COO Success”. These statuses are updated automatically by the system.</errorMessage>
</ValidationRule>