sfdx-source/force-app/main/default/objects/Xref__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Salesforce_Account_Name__c</columns>
    <columns>Account_Record_Type__c</columns>
    <columns>Account_Type__c</columns>
    <columns>External_ID_Source__c</columns>
    <columns>MINT_Store_Page__c</columns>
    <columns>Mint_BusinessPage__c</columns>
    <columns>Business_GroupID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>